--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                                                                        <style>
                                                                        *{
                                                                         font-family: 'Titillium Web';
+                                                                       text-align: center;
                                                                        }
                                                                        </style>
 </head>
