--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
     <![endif]-->
                                                                        <style>
                                                                        *{
-                                                                        font-family: 'Titillium Web';
+                                                                        font-family: Titillium Web,Roboto Condensed,Raleway,Arial;
                                                                        text-align: center;
+                                                                       color: #555;
                                                                        }
                                                                        </style>
 </head>
