--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <![endif]-->
                                                                        <style>
                                                                        *{
-                                                                        font-family: Titillium Web,Roboto Condensed,Raleway,Arial;
+                                                                        font-family: 'Titillium Web','Roboto Condensed',Raleway,Arial;
                                                                        text-align: center;
                                                                        color: #555;
                                                                        }
