--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                                                                         font-family: 'Roboto', sans-serif;
                                                                        text-align: center;
                                                                        color: #555;
+                                                                       background-color: #eee;
                                                                        }
                                                                        </style>
 </head>
@@ -37,7 +38,7 @@
                                                                        <br/>
 <br/>
 <img src="under.png" style="margin-bottom:20px;max-width:400px"><br/>
-Keluarga Cactus Here Preparing The Awesome! Coming Soon!:))
+Keluarga Cactus preparing for the new family! Coming Soon!:))
 <br/><br/>
 Contact:
 <br/>
